# soloroam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  soloroam.py  todo.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docs/: conf.py  index.rst
roam/: __main__.py  conftest.py  encounters.py  loot.py  requirements.txt  run.py  ships.py  soloroam.py  system.py  universe.py  words.py
roam/tests/: test_encounters.py  test_roam.py  test_system.py
soloroam/: __init__.py  __main__.py  encounters.py  loot.py  run.py  ships.py  system.py
soloroam/tests/: test_encounters.py  test_roam.py  test_system.py
tests/: test_encounters.py  test_roam.py  test_system.py
